# classification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda.yaml  main.py  pipeline.yml  pull_request_template.md  pyproject.toml  requirements.txt
.azuredevops/: pull_request_template.md
.azuredevops/pull_request_template/: pull_request_template.md
azure_ml/: azureml-demo-CLI-Auto.yml  azureml-demo-CLI.yml
azure_ml/compute_cluster/: az_ml_compute_cluster  readme.md
azure_ml/compute_instance/: az_ml_compute_instance.py  readme.md
azure_ml/container/: az_ml_container.ipynb  az_ml_container.py  continer.md
azure_ml/dataassets/: az_ml_dataassets.py  readme.md
azure_ml/datastore/: az_ml_datastore.py  az_ml_datastore_yml.py  readme.md
azure_ml/deploy_model/: deployment.yml  endpoint.yml  readme.md  score.py
azure_ml/integeration/: conda.yaml  conftest.py  prod_test.py  pyproject.toml  requ.bat  requirements.txt  test.json
azure_ml/job_training/: az_job_training.py
azure_ml/resource_group/: az_ml_resourcegroup.py  rg.md
azure_ml/storage_account/: az_ml_storage_account.py  script.md  st.md
azure_ml/workspace/: az_ml_workspace.py  ws.md
classification/: classifier.py
deploy/: deployment.yml  endpoint.yml  score.py
integeration/: staging_test.py
notebooks/: demo_notebook.ipynb
src/classification_demo/: classifier.py  main.py
tests/: test_classifier.py
yml_files/: algo_parms.yaml  conda_env.yaml  data-asset.yml  datastore.yml  job.yaml
