[tool.poetry]
name = "classification"
version = "0.1.0"
description = "classification"
authors = ["Deep Knowledge <Deepp.Knowledge@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "1.3.5"
joblib = "*"
matplotlib = "3.8.3"
#scikit-learn = "*"
lightgbm = "*"
pytest = "8.3.4"
black = "24.2.0"
flake8 = "7.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
azure = ["azure-ai-ml", "azure-identity", "azure-storage-blob", "inference-schema", "azureml-core", "azureml-mlflow"]