[tool.poetry]
name = "classification"
version = "0.1.6"
description = "classification using Light GBM alrogithm"
authors = ["Deep Knowledge <Deepp.Knowledge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "1.3.5"
joblib = "*"
matplotlib = "3.8.3"
#scikit-learn = "*"
lightgbm = "*"
pytest = "8.3.4"
black = "24.2.0"
flake8 = "7.0.0"
pre-commit = "^4.0.1"
azure-ai-ml = "^1.23.0"
azure-identity = "^1.19.0"
azure-mgmt-resource = "^23.2.0"
azure-storage-blob = "^12.24.0"
azure-mgmt-storage = "^21.2.1"
mlflow = "^2.19.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
azure = ["azure-ai-ml", "azure-identity", "azure-storage-blob", "inference-schema", "azureml-core", "azureml-mlflow"]