[tool.poetry]
name = "mlflow-env"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.11.0"
mlflow = "2.15.1"
cloudpickle = "2.2.1"
distributed = "2021.10.0"
jaraco-collections = "5.1.0"
jaraco-context = "5.3.0"
jaraco-functools = "4.0.1"
jaraco-text = "3.12.1"
lightgbm = "3.3.5"
more-itertools = "10.3.0"
pandas = "1.5.3"
scikit-learn = "1.5.2"
zstandard = "0.23.0"

# Mark these as optional since we'll install them with pip
matplotlib = { version = "3.4.3", optional = true }
scipy = { version = "1.10.1", optional = true }
kiwisolver = { version = "1.3.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"